# stc

./: CMakeLists.txt  README.md  TODO.md  tasks.docx
Filter/: CMakeLists.txt  README.md
Filter/benchmarks/: Filter.benchmark.cc
Filter/include/: IFilter.h  IOptFilter.h  OptFilter.h  UnoptFilter.h  Utils.h  fma_m128_OptFilter.h  fma_m128d_OptFilter.h  fma_m256_OptFilter.h  fma_m256d_OptFilter.h  m128_OptFilter.h  m128d_OptFilter.h  m256_OptFilter.h  m256d_OptFilter.h
Filter/specs/: Filter.spec.cc
Filter/src/: main.cc
LCG/: CMakeLists.txt  README.md
LCG/include/: LCG.h  LCGSequence.h  Utils.h
LCG/src/: LCG.cc  LCGCrack.cc  LCGSequence.cc  Utils.cc  in.txt  lcg_hack  lcg_hack1.cc  out.txt
LeastSquares/: LeastSquares.m  README.md  lsquares.m  randpoints.m  uniquepairs.m
